--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,22 @@
 header{
   height: 419px;
   background-image: url(../img/header.jpg);
+  font-weight: 700;
+  font-size: 11px;
+  color: #fff;
+  text-transform: uppercase;
 }
 
 .Intestazione{
+
+
+}
+
+.Intestazione div{
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 
 }
 
@@ -26,29 +39,43 @@ nav{
 
 nav ul li{
   display: inline-block;
+  float: left;
+  margin-top: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .StrumentiUtente{
   float: right;
+  margin-top: 15px;
 }
 
 .DiventaTutor{
-  display: inline-block
-
+  display: inline-block;
+  color: rgba(255,255,255,.5);
 }
 
 .Login{
-  display: inline-block
+  display: inline-block;
+  border: solid;
+  border-width: thin;
+  border-radius: 15px;
 
 }
 
 .StrutturaUnPiano{
-  display: inline-block
+  display: inline-block;
+  border: solid;
+  border-width: thin;
+  border-radius: 15px;
+  background-color: green;
+  font-weight: 800;
 
 }
 
 .MenuBurger{
-  display: inline-block
-
+  display: inline-block;
 
 }
