--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,13 @@ header{
 }
 
 .Intestazione{
-
-
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .Intestazione div{
+  weight: 50%;
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 8px;
@@ -37,7 +39,7 @@ nav{
 
 }
 
-nav ul li{
+nav ul li {
   display: inline-block;
   float: left;
   margin-top: 15px;
@@ -49,7 +51,7 @@ nav ul li{
 
 .StrumentiUtente{
   float: right;
-  margin-top: 15px;
+  margin-top: 6px;
 }
 
 .DiventaTutor{
@@ -65,17 +67,37 @@ nav ul li{
 
 }
 
-.StrutturaUnPiano{
+.IntestazioneStrutturaUnPiano{
   display: inline-block;
   border: solid;
   border-width: thin;
   border-radius: 15px;
   background-color: green;
-  font-weight: 800;
+  font-weight: 700;
 
 }
 
 .MenuBurger{
   display: inline-block;
 
+}
+
+.SottoIntestazione{
+
+}
+
+h1{
+
+}
+
+.StrutturaUnPiano{
+  border: solid;
+  border-width: thin;
+  border-radius: 15px;
+  background-color: green;
+  font-weight: 700;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
