--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ header{
   font-size: 11px;
   color: #fff;
   text-transform: uppercase;
+  padding-left: 13%;
 }
 
 .Intestazione{
@@ -21,7 +22,6 @@ header{
 }
 
 .Intestazione div{
-  weight: 50%;
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 8px;
@@ -83,11 +83,12 @@ nav ul li {
 }
 
 .SottoIntestazione{
+  margin-top: 10%;
 
 }
 
 h1{
-
+  margin-bottom: 20px;
 }
 
 .StrutturaUnPiano{
@@ -100,4 +101,6 @@ h1{
   padding-right: 25px;
   padding-top: 8px;
   padding-bottom: 8px;
+  width: 14%;
+  text-align: center;
 }
